--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,1 +1,38 @@
-hold
+defaults: &defaults
+  docker:
+    - image: hashicorp/terraform:light
+
+version: 2
+jobs:
+  terraform_plan:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          working_directory: .
+          command: |
+            terraform init
+            terraform plan
+  terraform_apply:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          working_directory: .
+          command: |
+            terraform init
+            terraform apply -auto-approve
+workflows:
+  version: 2
+  terraform_plan:
+    jobs:
+      - terraform_plan:
+          filters:
+            branches:
+              ignore: master
+  terraform_apply:
+    jobs:
+      - terraform_apply:
+          filters:
+            branches:
+              only: master
